# telegram-bot-tebak

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
src/app/controllers/: base.py  user.py
src/app/models/: __init__.py  base.py  enums.py  game.py  game_player.py  player.py  question.py  user.py
src/app/repositories/: __init__.py  game.py  game_player.py  player.py  question.py  user.py
src/app/schemas/: base.py  user.py
src/app/services/: base.py
src/app/services/game/: __init__.py  service.py
src/app/services/game/modules/: __init__.py  create.py  read.py  update.py  validators.py
src/app/services/llm/: __init__.py  service.py
src/app/services/llm/modules/: __init__.py  generate.py  prompts.py
src/app/services/user/: __init__.py  service.py
src/app/services/user/modules/: __init__.py  create.py  delete.py  read.py  update.py  validators.py
src/bot/: __init__.py  dependencies.py  main.py
src/bot/handlers/: __init__.py  commands.py
src/bot/keyboards/: __init__.py  menu.py
src/bot/utils/: __init__.py  helpers.py  timers.py
src/config/: env.py  logging.py  security.py
src/database/: session.py
src/database/factories/: __init__.py
src/database/migrations/: env.py
src/database/migrations/versions/: 001_add_game_tables.py  002_add_player_is_verified.py  003_enforce_player_verified_default_false.py  0d8254272b94_initial_migration.py  __init__.py
src/public/: websocket_test.html
src/routes/api/v1/: __init__.py  users.py  users_ws.py
src/scripts/: migrate_fresh.py
tests/: __init__.py  conftest.py  test_bot_helpers.py  test_bot_timers.py  test_game_service.py  test_game_update_service.py  test_game_validators.py  test_question_repository.py
